--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,43 +1,89 @@
+html {
+    height: 100%;
+}
+
 body {
 
-        #sticky-footer {
-            padding: 0px;
-            margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    width: 100%;
 
-        .myFooter {
-            background-color: #7f8375;
-            color: white;
-            letter-spacing: 3px;
-            padding-top: 70px;
-            padding-bottom: 50px;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
+    footer {
+    background:#7f8375;
+    color: white;
+    margin-top: auto;
+    opacity: 80%;
+    padding-top: 50px;
+    letter-spacing: 3px;
 
-            li {
-                list-style-type: none;
-                padding: 5px;
-                justify-content: left;
-                font-size: 13px;
-                font-weight: 100;
-            }
-
-            ul {
-                padding-left: 2px;
-            }
-
-            .information {
-                padding-left: 2px;
-                text-transform: uppercase;
-                font-size: 11px;
-                font-weight: 700;
-            }
-
-            .line {
-                border: 0.4px solid white;
-                opacity: 50%;
-            }
-        }
     }
+
+    .information {
+        font-size: 67%;
+        text-transform: uppercase;
+        font-weight: 500;
+        padding: 5px;
+    }
+
+    li {
+        font-weight: 100;
+        font-size: 85%;
+        list-style-type: none;
+        justify-content: left;
+    }
+    
+    ul {
+        padding: 5px;
+    }
+
+    .line {
+        border: 0.4px solid white;
+        opacity: 50%;
+    }
+    
 }
+
+
+
+
+    //     #sticky-footer {
+    //         padding: 0px;
+    //         margin-top: 10px;
+
+    //     .myFooter {
+    //         background-color: #7f8375;
+    //         color: white;
+    //         letter-spacing: 3px;
+    //         padding-top: 70px;
+    //         padding-bottom: 50px;
+    //         position: absolute;
+    //         bottom: 0;
+    //         left: 0;
+    //         width: 100%;
+
+    //         li {
+    //             list-style-type: none;
+    //             padding: 5px;
+    //             justify-content: left;
+    //             font-size: 13px;
+    //             font-weight: 100;
+    //         }
+
+    //         ul {
+    //             padding-left: 2px;
+    //         }
+
+    //         .information {
+    //             padding-left: 2px;
+    //             text-transform: uppercase;
+    //             font-size: 11px;
+    //             font-weight: 700;
+    //         }
+
+    //         .line {
+    //             border: 0.4px solid white;
+    //             opacity: 50%;
+    //         }
+    //     }
+    // }
