--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,7 +1,6 @@
-<footer id="sticky-footer">
-  <div class="container-fluid myFooter">
+<footer>
+  <div class="container-fluid myfooter">
     <div class="informationbox">
-
       <div class="col-sm-12">
         <div class="informationlist">
           <h2 class="information">Information</h2>
