--- a/public/main.css
+++ b/public/main.css
@@ -188,3 +188,19 @@ body {
   body .line {
     border: 0.4px solid white;
     opacity: 50%; }
+  body #icon-box {
+    background-color: #EADCCF;
+    justify-content: center;
+    color: white;
+    padding-top: 10px; }
+    body #icon-box #icon-link {
+      text-align: end;
+      margin: auto;
+      padding: 0; }
+    body #icon-box #brand {
+      text-transform: uppercase;
+      margin: auto;
+      font-weight: bold; }
+    body #icon-box p {
+      font-size: 10px;
+      font-weight: 100; }
