--- a/public/main.css
+++ b/public/main.css
@@ -189,7 +189,7 @@ body {
     border: 0.4px solid white;
     opacity: 50%; }
   body #icon-box {
-    background-color: #EADCCF;
+    background-color: #CECFCC;
     justify-content: center;
     color: white;
     padding-top: 10px; }
