--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -43,7 +43,7 @@ body {
     }
 
     #icon-box {
-        background-color: #EADCCF;
+        background-color: #CECFCC;
         justify-content: center;
         color: white;
         padding-top: 10px;
