--- a/views/startPage.ejs
+++ b/views/startPage.ejs
@@ -14,9 +14,37 @@
     <%- include ("partial/navbar.ejs") %>
 
     <div>
+                <div class="scrolling-wrapper">
+        
         New Arrivals
         <br>
-        <%= startPageProducts.newArrivals %>
+        <% startPageProducts.newArrivals.forEach(newArrival => { %>
+            
+
+
+
+            <div class="new-arrival">
+                
+                    <div class="productImage">
+                        <a href="/products/<%= newArrival._id %>"><img src="<%= newArrival.imgUrl %>" alt="productImage"></a>
+                    </div>
+                    <div class="productInfo">
+                        <div class="productTitle">
+                            <span class="title"><%= newArrival.title %></span>
+                            <span class="colors">ooo</span>
+                        </div>
+                        <div class="productPrice">
+                            <span class="price"><%= newArrival.price %> SEK</span>
+                        </div>
+                    </div>
+            </div>
+       <% }); %>
+
+    </div>
+        
+                
+
+              </div>
     </div>
     <hr>
     <div>
@@ -24,8 +52,8 @@
         <br>
         <%= startPageProducts.topSellers %>
     </div>
-
+    <%- include ("partial/footer.ejs") %>
 </body>
-<%- include ("partial/footer.ejs") %>
+
 
 </html>
