--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,8 +1,17 @@
+.opacity-cover {
+    background-color: white;
+    opacity: 60%;
+    z-index: 998;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    // display: none;
+}
 body {
     font-family: 'Spartan', sans-serif;
     padding-bottom: 0;
 
-    .navContainer {
+    .nav-container {
         z-index: 999;
         width: 100%;
         position: absolute;
@@ -11,7 +20,7 @@ body {
         background-color: white;
         transition: 1s;
         
-        .searchbarContainer {
+        .searchbar-container {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -20,7 +29,7 @@ body {
             margin: 0 4%;
             border-bottom: 1px solid #7f8375;
 
-            .searchIcon {
+            .search-icon {
                 background-image: url("../public/assets/searchicon.png");
                 background-color: #cccccc;
                 height: 30px;
@@ -30,7 +39,7 @@ body {
                 background-size: cover;
             }
 
-            .inputsearch {
+            .input-search {
                 width: 100%;
                 border: none;
 
@@ -40,12 +49,12 @@ body {
             }
         }
 
-        .about, .signIn, .menWomen {
+        .about, .sign-in, .men-women {
             width: 90%;
             margin: 50px auto;
             padding: 0;
             
-            .freeShipping {
+            .free-shipping {
                 width: 35%;
                 margin-bottom: 40px;
                 font-weight: bold;
@@ -78,39 +87,39 @@ body {
                 }
             }
         }
-        .menWomen {
+        .men-women {
             border-bottom: 1px solid #7f8375;
             width: 92%;
             padding-bottom: 50px;
             // margin: 0 4%;
         }
     }
-    .navShow {
+    .nav-show {
     
         transition: 1s;
         transform: translateX(0%);
         transition-timing-function: ease-out;
+        // opacity: unset;
+        @include tablet {
+            width: 70%;
+        }
+        @include desktop {
+            width: 50%;
+        }
     }
 
-    .burgerContainer {
+    .burger-container {
         width: 100%;
         padding: 10px 20px;
         text-align: left;
         background-color: white;
 
-        .hambutton {
+        .hamburger-button {
             border: none;
             background: white;
+            margin-top: 18px;
         }
     }
-
-    nav.active {
-        left: 0px;
-    }
-
-    .close {
-        cursor: pointer;
-        transform: rotate(45deg);
-    }
-
 }
+
+
