--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,15 +1,15 @@
-<div class="burgerContainer">
-    <button type="button" class="hambutton"><i class="fas fa-bars fa-2x menu" aria-hidden="true"></i></button>
+<div class="burger-container">
+    <button type="button" class="hamburger-button"><i class="fas fa-bars fa-2x menu" aria-hidden="true"></i></button>
 </div>
-<nav class="navContainer">
-    <div class="searchbarContainer">
-        <div class="searchIcon"></div>
+<nav class="nav-container">
+    <div class="searchbar-container">
+        <div class="search-icon"></div>
 
-    <input type="text" class="inputsearch" placeholder="Search Products">
+    <input type="text" class="input-search" placeholder="Search Products">
     <!-- <hr> -->
     </div>
     <!-- <hr> -->
-    <ul class="menWomen">
+    <ul class="men-women">
         <li class="fat bottom"><a href="#">Shop all </a></li>
         <li class="fat"><a href="#">Women</a></li>
         <li><a href="#">T-Shirts</a></li>
@@ -26,17 +26,19 @@
 
 
    <ul class="about">
-        <li class="freeShipping">Free shipping on orders over 990 sek, and free returns</li>
+        <li class="free-shipping">Free shipping on orders over 990 sek, and free returns</li>
         
         <li><a href="#">Subcribe</a></li>
         <li><a href="#">Store Locator</a></li>
         <li><a href="#">Customer Service</a></li>
     </ul>
 
-    <ul class="signIn">
+    <ul class="sign-in">
         <li><a href="#">Sign in</a></li>
         <li><a href="#">Shipping to: Worldwide</a></li>
 
     </ul>
-
+    
 </nav>
+<div class="cover">
+</div>
