--- a/scss/_startPage.scss
+++ b/scss/_startPage.scss
@@ -17,7 +17,7 @@
     overflow-y: hidden;
     white-space: nowrap;
   
-    .new-arrival {
+    .new-arrival, .top-seller {
       display: inline-block;
     }
   }
