--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -14,11 +14,50 @@
 
 <!-- Product -->
     
-<section id="detailProductPage">
+<section id="detail-product-page">
+    <!-- image mobile -->
+    <div id="image-div-mobile">
+        <div class="image-container">
+            <img src="<%= clickedProduct.imgUrl %>" alt="product-image">
+        </div>
+    </div>
+    <!-- image desktop -->
+    <div id="image-div-desktop">
+        <div class="image-container">
+            <img src="<%= clickedProduct.imgUrl %>" alt="product-image">
+        </div>
+        <div class="image-container">
+            <img src="<%= clickedProduct.imgUrl %>" alt="product-image">
+        </div>
+        <div class="image-container">
+            <img src="<%= clickedProduct.imgUrl %>" alt="product-image">
+        </div>
+    </div>
+
+    <!-- product info -->
+    <div id="info-div">
+        <div class="info-title-price-container">
+            <span>
+                <%= clickedProduct.title %>
+            </span>
+            <span>
+                <%= clickedProduct.price %>
+            </span>
+        </div>
+        <div class="buttons-size-bag-container">
+            <button class="choose-size">Choose size +</button>
+            <button class="add-to-bag">Add to bad</button>
+        </div>
+        <div class="color-container">
+            <button class="color-picker">Choose color</button>
+        </div>
+    
+    </div>
+
+
+
 
 </section>
-
-    
 
 </body>
 </html>
