--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -2,10 +2,9 @@
     background-color: white;
     opacity: 60%;
     z-index: 998;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
-    // display: none;
 }
 body {
     font-family: 'Spartan', sans-serif;
@@ -14,11 +13,14 @@ body {
     .nav-container {
         z-index: 999;
         width: 100%;
+        height: 95vh;
         position: absolute;
+        top: 35px;
         transform: translateX(-130%);
         transition-timing-function: ease-in;
         background-color: white;
         transition: 1s;
+        margin-top: 50px;
         
         .searchbar-container {
             display: flex;
@@ -112,7 +114,7 @@ body {
         width: 100%;
         padding: 10px 20px;
         text-align: left;
-        background-color: white;
+        z-index: 1000;
 
         .hamburger-button {
             border: none;
