--- a/scss/_startPage.scss
+++ b/scss/_startPage.scss
@@ -13,6 +13,8 @@
 
 
 .scrolling-wrapper {
+    display:flex;
+    flex-direction: row;
     overflow-x: scroll;
     overflow-y: hidden;
     white-space: nowrap;
