--- a/scss/_detailProductPage.scss
+++ b/scss/_detailProductPage.scss
@@ -54,7 +54,6 @@
         height: 100%;
         width: 96%;
         margin: 0 2%;
-        border: 1px solid black;
 
         .info-title-price-container {
             display: flex;
@@ -94,7 +93,7 @@
         @include tablet {
             position: -webkit-sticky;
             position: sticky;
-            top: 0;
+            top: 40%;
             width: 40%;
         }
     }
