--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -37,7 +37,7 @@ body {
         padding: 5px;
     }
 
-    .line {
+    .footerline {
         border: 0.4px solid white;
         opacity: 50%;
     }
@@ -65,49 +65,41 @@ body {
             font-weight: 100;
         }
     }
+
+    #f-menu3 {
+        text-align: center;
+    }
+
+    .sign-up-wrapper {
+        display: inline-block;
+        width: 300px;
+        padding: 30px;
+        padding-bottom: 70px;
+    }
+
+    h4 {
+        text-transform: uppercase;
+        font-size: 140%;
+        font-weight: 800;
+        letter-spacing: 3px;
+    }
+
+    .sign-up {
+        width: 100%;
+        height: 45px;
+        font-weight: 100;
+        font-size: 14px;
+    }
+
+    #subscribe {
+        background-color: #7f8375;
+        color: white;
+        font-weight: 100;
+    }
+
+    p {
+        text-align: center;
+    }
     
 }
 
-
-
-
-    //     #sticky-footer {
-    //         padding: 0px;
-    //         margin-top: 10px;
-
-    //     .myFooter {
-    //         background-color: #7f8375;
-    //         color: white;
-    //         letter-spacing: 3px;
-    //         padding-top: 70px;
-    //         padding-bottom: 50px;
-    //         position: absolute;
-    //         bottom: 0;
-    //         left: 0;
-    //         width: 100%;
-
-    //         li {
-    //             list-style-type: none;
-    //             padding: 5px;
-    //             justify-content: left;
-    //             font-size: 13px;
-    //             font-weight: 100;
-    //         }
-
-    //         ul {
-    //             padding-left: 2px;
-    //         }
-
-    //         .information {
-    //             padding-left: 2px;
-    //             text-transform: uppercase;
-    //             font-size: 11px;
-    //             font-weight: 700;
-    //         }
-
-    //         .line {
-    //             border: 0.4px solid white;
-    //             opacity: 50%;
-    //         }
-    //     }
-    // }
