--- a/scss/_startPage.scss
+++ b/scss/_startPage.scss
@@ -24,9 +24,11 @@
     
         display: inline-block;
       .product-image {
-          width: 220px;
+          width: 45vw;
+          margin: 10px;
           
           img {
+              
               width: 100%;
         }
       }
