--- a/scss/_detailProductPage.scss
+++ b/scss/_detailProductPage.scss
@@ -7,6 +7,11 @@
     flex-direction: row;
     flex-wrap: wrap;
 
+    button {
+        text-transform: uppercase;
+        font-size: 0.7rem;
+    }
+
     // Image mobile
     #image-div-mobile {
         display: flex;
@@ -32,13 +37,16 @@
         justify-content: center;
         flex-direction: column;
         width: 50%;
+        margin: 10px 0 0 0;
 
         .image-container {
             width: 100%;
+            display: flex;
+            justify-content: center;
+            margin: 4px 0;
 
             img {
-                width: 100%;
-                object-fit: cover;
+                width: 90%;
             }
         }
         @include tablet {
@@ -52,40 +60,109 @@
         flex-direction: row;
         flex-wrap: wrap;
         height: 100%;
-        width: 96%;
-        margin: 0 2%;
+        width: 94%;
+        margin: 0 3%;
 
-        .info-title-price-container {
+        .sticky {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            flex-direction: column;
             width: 100%;
-            height: 40px;
-        }
+            border-top: 1px solid rgb(225, 225, 225);
+            padding: 0 10px;
+            background-color: white;
+            position: sticky;
+            bottom: 0;
+            left: 0;
 
-        .buttons-size-bag-container {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            height: 60px;
-            margin: 10px 0;
-
-            button {
-                width: 45%;
-                height: 40px;
+            .info-title-price-container {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+                margin: 20px 0;
+    
+                span {
+                    width: 100%;
+                }
+                .price {
+                    text-align: end;
+                    font-size: 0.8rem;
+                    font-weight: 700;
+                }
+    
+                @include tablet {
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    justify-content: flex-start;
+                    margin: 0 0 20px 0;
+                }
             }
+    
+            .buttons-size-bag-container {
+                display: flex;
+                justify-content: space-between;
+                width: 100%;
+                height: 60px;
+    
+                button {
+                    width: 45%;
+                    height: 40px;
+                    border-color: rgb(225, 225, 225);
+                }
+                .choose-size {
+                    background-color: white;
+                }
+                .add-to-bag {
+                    background-color:#7f8375;
+                    color: white;
+                }
+            }
+
+            @include tablet {
+                position: relative;
+            }
+            
         }
+        
 
         .color-container {
             display: flex;
             justify-content: center;
             width: 100%;
             height: 60px;
-            margin: 60px 0 0 0;
+            margin: 80px 0 0 0;
 
             .color-picker {
+                display: flex;
+                justify-content: space-between;
                 width: 100%;
                 height: 40px;
+                background-color: white;
+                border-color: rgb(225, 225, 225);
+            }
+        }
+
+        .size-container {
+            display: flex;
+            justify-content: center;
+            flex-direction: row;
+            flex-wrap: wrap;
+            width: 100%;
+            margin: 40px 0;
+
+            .size-header {
+                width: 100%;
+                text-align: center;
+                margin: 15px 0;
+                font-size: 0.8rem;
+            }
+
+            button {
+                width: 40px;
+                height: 40px;
+                margin: 0 5px;
+                background-color: white;
+                border-color: rgb(225, 225, 225);
             }
         }
 
@@ -93,8 +170,9 @@
         @include tablet {
             position: -webkit-sticky;
             position: sticky;
-            top: 40%;
-            width: 40%;
+            width: 48%;
+            top: 120px;
+            margin: 10px 2% 0 0;
         }
     }
 
