--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,8 +9,8 @@
 <body>
     
     <form action="" method="POST">
-        <input type="text" name="firstName" placeholder="firstName">
-        <input type="text" name="surname" placeholder="surname">
+        <input type="text" name="firstName" placeholder="firstname">
+        <input type="text" name="surName" placeholder="surname">
         <input type="email" name="email" placeholder="email">
         <input type="password" name="password" placeholder="password">
         <button type="submit">Sign up</button>
