--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,6 +16,6 @@
         <button type="submit">Sign up</button>
     </form>
 
-
+<h2>Already have an account?</h2><a href="/login">Log in</a>
 </body>
 </html>
