--- a/public/main.css
+++ b/public/main.css
@@ -459,7 +459,7 @@ body {
         border-color: #e1e1e1; }
         @media (min-width: 820px) {
           #detail-product-page #info-div .size-container button {
-            margin: 0; } }
+            margin: 0 10px 0 0; } }
     #detail-product-page #info-div .desktop-bag {
       display: none;
       justify-content: space-between;
