--- a/scss/_detailProductPage.scss
+++ b/scss/_detailProductPage.scss
@@ -165,7 +165,7 @@
                 border-color: rgb(225, 225, 225);
 
                 @include tablet {
-                    margin: 0;
+                    margin: 0 10px 0 0;
                 }
             }
         }
