--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -18,6 +18,7 @@
         <div class="categoryContainer">
             <div class="categoryContainerHeader">
                 <h2><%= heading %></h2>
+                <p><%= headingDescription %></p>
             </div>
             <div class="categoryContainerButtons">
                 <p><a href="/<%= otherCategories[0] %>">Shop <%= otherCategories[0] %></a></p>
