--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,4 +8,5 @@
 @import 'productPage';
 @import 'detailProductPage';
 @import 'shoppingCart';
+@import 'checkout';
 @import url('https://fonts.googleapis.com/css?family=Spartan:100,200,300,400,500,600,700,800,900&display=swap');
