--- a/public/main.css
+++ b/public/main.css
@@ -345,12 +345,11 @@ body {
         #productPage .productContainer .product {
           width: 30.33%;
           margin: 0 1.5% 20px 1.5%; } }
-
-.show-more {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin: 30px 0; }
+  #productPage .show-more {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 30px 0; }
 
 #detail-product-page {
   font-family: 'Spartan', sans-serif;
