--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
     <h4><a href="/loginadmin">Log in as Admin</a></h4>
 
     <h2>Register</h2>
-    <form action="" method="POST">
+    <form action="/register" method="POST">
         <input type="text" name="firstName" placeholder="firstname">
         <input type="text" name="surName" placeholder="surname">
         <input type="email" name="email" placeholder="email">
