--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,9 @@
         <button type="submit">Log in</button>
     </form>
 
+    <h3>Forgot password? </h3>
+    <a href="/reset">Send new</a>
+
     <h4><a href="/loginadmin">Log in as Admin</a></h4>
 
     <h2>Register</h2>
