--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -6,11 +6,14 @@
     width: 100%;
     height: 100%;
 }
+
 body {
     font-family: 'Spartan', sans-serif;
     padding-bottom: 0;
 
     .nav-container {
+        font-family: 'Spartan', sans-serif;
+        visibility: hidden;
         z-index: 999;
         width: 100%;
         height: 95vh;
@@ -21,7 +24,7 @@ body {
         background-color: white;
         transition: 1s;
         margin-top: 50px;
-        
+
         .searchbar-container {
             display: flex;
             justify-content: center;
@@ -44,18 +47,20 @@ body {
             .input-search {
                 width: 100%;
                 border: none;
-
+                
                 background: white;
                 padding: 20px 0 10px 40px;
 
             }
         }
 
-        .about, .sign-in, .men-women {
+        .about,
+        .sign-in,
+        .men-women {
             width: 90%;
             margin: 50px auto;
             padding: 0;
-            
+
             .free-shipping {
                 width: 35%;
                 margin-bottom: 40px;
@@ -67,6 +72,7 @@ body {
             .fat {
                 font-weight: bold;
             }
+
             .bottom {
                 margin-bottom: 30px;
             }
@@ -74,21 +80,23 @@ body {
             li {
                 list-style: none;
                 padding: 5px;
-                color: #7f8375;
+                color: black;
                 text-decoration: none;
 
                 a {
-                    color: #7f8375;
+                    color: black;
                     text-decoration: none;
 
                 }
 
                 :hover {
-                    color: black;
+                    color: #7f8375;
                     text-decoration: none;
+                    font-weight: 900;
                 }
             }
         }
+
         .men-women {
             border-bottom: 1px solid #7f8375;
             width: 92%;
@@ -96,15 +104,18 @@ body {
             // margin: 0 4%;
         }
     }
+
     .nav-show {
-    
-        transition: 1s;
+        visibility: visible;
+        transition: 0.5s;
         transform: translateX(0%);
         transition-timing-function: ease-out;
+
         // opacity: unset;
         @include tablet {
             width: 70%;
         }
+
         @include desktop {
             width: 50%;
         }
@@ -123,5 +134,3 @@ body {
         }
     }
 }
-
-
