--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,14 +19,14 @@
 
     <h4><a href="/loginadmin">Log in as Admin</a></h4>
 
-    <h2>Register</h2>
-    <form action="/register" method="POST">
+    <!-- <h2>Register</h2> -->
+    <!-- <form action="/register" method="POST">
         <input type="text" name="firstName" placeholder="firstname">
         <input type="text" name="surName" placeholder="surname">
         <input type="email" name="email" placeholder="email">
         <input type="password" name="password" placeholder="password">
         <button type="submit">Sign up</button>
-    </form>
+    </form> -->
 
 
 </body>
